--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
 						/>
 					</div>
 					<div data-aos="fade-right" data-aos-duration="1500">
-						<h1 class="font-bold text-4xl md:text-5xl">
+						<h1 class="font-bold text-4xl md:text-5xl lg:text-4xl">
 							Kenapa harus membaca buku?
 						</h1>
 						<p class="text-text-abu text-lg font-medium mt-2 md:text-2xl">
@@ -320,9 +320,9 @@
 								<div class="gridlayoutbox bg-red-icon bg-opacity-20">
 									<i class="fa-solid fa-paw text-red-400 md:text-xl"></i>
 								</div>
-								<main class="mt-[55%] md:mt-[30%] lg:mt-[40%] container">
-									<h1 class="font-bold lg:text-xl md:text-3xl">WorldCat</h1>
-									<p class="text-xs lg:text-sm">
+								<main class="gridmain container">
+									<h1 class="gridmaintitle">WorldCat</h1>
+									<p class="gridmaintext">
 										Menyajikan informasi terperinci tentang koleksi buku global!
 									</p>
 								</main>
@@ -334,9 +334,9 @@
 										class="fa-solid fa-layer-group text-yellow-500 lg:text-xl"
 									></i>
 								</div>
-								<main class="mt-[55%] md:mt-[35%] lg:mt-[40%] container">
-									<h1 class="font-bold lg:text-xl">LibraryThing</h1>
-									<p class="text-xs lg:text-sm">
+								<main class="gridmain container">
+									<h1 class="gridmaintitle">LibraryThing</h1>
+									<p class="gridmaintext">
 										Menyediakan katalog online dengan informasi lengkap!
 									</p>
 								</main>
@@ -348,9 +348,9 @@
 										class="fa-solid fa-circle-check text-blue-500 lg:text-xl"
 									></i>
 								</div>
-								<main class="mt-[55%] lg:mt-[40%] container">
-									<h1 class="font-bold lg:text-xl">Goodreads</h1>
-									<p class="text-xs lg:text-sm">
+								<main class="gridmain container">
+									<h1 class="gridmaintitle">Goodreads</h1>
+									<p class="gridmaintext">
 										Platform yang memuat daftar lengkap buku beserta informasi
 										rinci!
 									</p>
@@ -363,9 +363,9 @@
 										class="fa-solid fa-book-open-reader text-slate-500 lg:text-xl"
 									></i>
 								</div>
-								<main class="mt-[55%] lg:mt-[40%] container">
-									<h1 class="font-bold lg:text-xl">Open Library</h1>
-									<p class="text-xs lg:text-sm">
+								<main class="gridmain container">
+									<h1 class="gridmaintitle">Open Library</h1>
+									<p class="gridmaintext">
 										Koleksi buku digital yang menarik untuk dijelajahi!
 									</p>
 								</main>
@@ -384,20 +384,20 @@
 				<div class="flex justify-between lg:justify-evenly items-center">
 					<div>
 						<h1
-							class="font-bold text-3xl leading-none mb-4 lg:mb-8 lg:text-7xl"
+							class="font-bold text-3xl leading-none mb-4 lg:mb-8 md:text-7xl"
 						>
 							Mulai Baca<br />Sekarang.
 						</h1>
 						<a
 							href=""
-							class="px-4 py-2 lg:px-8 rounded-full bg-black hover:bg-dasar transition duration-300 ease-in-out hover:text-black text-dasar text-sm lg:text-4xl"
+							class="px-4 py-2 lg:px-8 rounded-full bg-black hover:bg-dasar transition duration-300 ease-in-out hover:text-black text-dasar text-sm md:text-4xl"
 							>Baca Buku</a
 						>
 					</div>
 					<div class="">
 						<div
 							data-aos="fade-down"
-							class="w-28 lg:w-64 shadow-md overflow-hidden rounded-sm relative lg:left-8 lg:top-12 top-8"
+							class="w-28 md:w-64 shadow-md overflow-hidden rounded-sm relative lg:left-8 lg:top-12 top-8"
 						>
 							<img
 								src="../img/konosuba.webp"
@@ -407,7 +407,7 @@
 						</div>
 						<div
 							data-aos="fade-up"
-							class="w-28 lg:w-64 shadow-md overflow-hidden rounded-sm relative z-10 -top-16 lg:-top-36 right-8"
+							class="w-28 md:w-64 shadow-md overflow-hidden rounded-sm relative z-10 -top-16 lg:-top-36 right-8"
 						>
 							<img
 								src="../img/konosuba.webp"
