--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
 						<h1 class="font-bold">Menu cepat</h1>
 						<ul class="flex flex-col justify-start gap-4 items-start">
 							<li><a href="#" class="">Beranda</a></li>
-							<li><a href="#" class="">Koleksi</a></li>
+							<li><a href="./koleksi.html" class="">Koleksi</a></li>
 							<li><a href="#" class="">Repositori</a></li>
 							<li><a href="#" class="">Rekomendasi</a></li>
 							<li><a href="#" class="">Link</a></li>
