--- a/public/koleksi.html
+++ b/public/koleksi.html
@@ -128,14 +128,14 @@
 									<img src="../img/moshoku.jpg" alt="" class="object-cover" />
 								</div>
 								<div
-									class="absolute bottom-0 w-full h-16 p-2 pt-4 bg-black bg-opacity-70"
+									class="absolute bottom-0 w-full h-16 p-2 bg-black bg-opacity-70"
 								>
 									<h1
-										class="font-semibold text-xs text-white truncate overflow-hidden"
+										class="font-semibold text-base text-white truncate overflow-hidden"
 									>
 										Moshoku Tensei : Jobless Reincarnationdadawd
 									</h1>
-									<h2 class="font-semibold text-[0.5rem] text-orange-500">
+									<h2 class="font-semibold text-sm text-orange-500">
 										Rifujin na Magonote
 									</h2>
 								</div>
