--- a/public/koleksi.html
+++ b/public/koleksi.html
@@ -65,12 +65,12 @@
 							id="navbar-ul"
 						>
 							<li class="">
-								<a href="" class="flex justify-between items-center"
+								<a href="./index.html" class="flex justify-between items-center"
 									>Homepage <i class="fa-solid fa-right-long pt-2 lg:hidden"></i
 								></a>
 							</li>
 							<li class="mt-2 lg:mt-0">
-								<a href="" class="flex justify-between items-center"
+								<a href="#" class="flex justify-between items-center"
 									>Koleksi <i class="fa-solid fa-right-long pt-2 lg:hidden"></i
 								></a>
 							</li>
@@ -120,58 +120,44 @@
 						Temukan keajaiban pengetahuan terbaru dalam buku yang diperbarui ini
 					</p>
 				</div>
-				<div class="grid grid-cols-1 grid-rows-3 gap-4 mt-4">
-					<div class="bg-gray-200 rounded-md overflow-hidden flex">
-						<div>
-							<div class="relative w-40 h-full">
-								<div class="z-[0]">
-									<img src="../img/moshoku.jpg" alt="" class="object-cover" />
-								</div>
-								<div
-									class="absolute bottom-0 w-full h-16 p-2 bg-black bg-opacity-70"
-								>
-									<h1
-										class="font-semibold text-base text-white truncate overflow-hidden"
-									>
-										Moshoku Tensei : Jobless Reincarnationdadawd
-									</h1>
-									<h2 class="font-semibold text-sm text-orange-500">
-										Rifujin na Magonote
-									</h2>
+				<ul class="grid grid-cols-1 grid-rows-3 gap-4 mt-4">
+					<li class="bg-white rounded-sm shadow-sm">
+						<div class="flex justify-center">
+							<div class="bg-blue-500 w-3/4 h-52">
+								<div class="w-full h-full">
+									<div class="w-full h-full relative">
+										<div
+											class="absolute bottom-0 w-full h-14 flex flex-col z-50"
+										>
+											<div class="p-1 w-full h-14 bg-black bg-opacity-70">
+												<h1 class="text-white font-bold text-sm text-center">
+													Konosuba wdawdpakdawd
+												</h1>
+											</div>
+										</div>
+										<img
+											src="../img/konosuba.webp"
+											class="object-cover w-full h-full"
+											alt=""
+										/>
+									</div>
 								</div>
 							</div>
+							<div class="bg-red-500 w-full">
+								<div class="w-full bg-green-400">adwd</div>
+							</div>
 						</div>
-						<div class="w-full h-full">
-							<main class="container pt-4 w-full h-4">
-								<p
-									class="overflow-hidden text-ellipsis w-full h-40 text-xs font-medium text-slate-500 leading-tight"
-								>
-									Mengisahkan tentang seorang pria pengangguran dan putus asa
-									yang bereinkarnasi ke dunia fantasi sambil mempertahankan
-									ingatannya, ia bertekad untuk menjalani kehidupan barunya
-									tanpa penyesalan.
-								</p>
-								<div class="flex gap-2 mt-2">
-									<a
-										href=""
-										class="bg-orange-400 px-6 py-1 text-xs font-semibold text-[10px] text-white rounded-full hover:bg-orange-400"
-										>Novel</a
-									>
-									<a
-										href=""
-										class="bg-orange-400 px-6 py-1 text-xs font-semibold text-[10px] text-white rounded-full"
-										>Fantasy</a
-									>
-								</div>
-							</main>
-						</div>
-					</div>
-					<div class="bg-gray-200 p-4">Baris 1, Kolom 2</div>
-					<div class="bg-gray-200 p-4">Baris 2, Kolom 1</div>
-					<div class="bg-gray-200 p-4">Baris 2, Kolom 2</div>
-					<div class="bg-gray-200 p-4">Baris 3, Kolom 1</div>
-					<div class="bg-gray-200 p-4">Baris 3, Kolom 2</div>
-				</div>
+					</li>
+					<li class="bg-blue-500">
+						<a href="">abogoboga</a>
+					</li>
+					<li class="bg-blue-500">
+						<a href="">abogoboga</a>
+					</li>
+					<li class="bg-blue-500">
+						<a href="">abogoboga</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 		<!-- End Section 1 -->
